--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sitev2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://prithivi-maruthachalam.github.io/kitefurn-website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "react-snapshot": "^1.3.0"
   }
 }
